# SCADA_VSA_Design_Project

./: README.md
GUI_Code/Expo_GUI/: CMakeLists.txt  Makefile  cmake_install.cmake  customdelegate.cpp  customdelegate.h  databasemanager.cpp  databasemanager.h  graphwidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ntpclient.cpp  ntpclient.h  qledlabel.cpp  qledlabel.h
GUI_Code/build-Scada_GUI_V3-Desktop_Qt_5_15_16_MSVC2019_64bit-RelWithDebInfo/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
GUI_Code/build-Scada_GUI_V3-Desktop_Qt_5_15_16_MSVC2019_64bit-RelWithDebInfo/.cmake/api/v1/reply/: cache-v2-ad95180713cc9bb843ed.json  cmakeFiles-v1-7354dd3ab3194830600c.json  codemodel-v2-021e3cadd38db83d6e94.json  directory-.-RelWithDebInfo-8f50e4772a3898598552.json  index-2024-02-13T16-47-57-0448.json  target-Scada_GUI_V3-RelWithDebInfo-ac2cb968c50ae23efcfc.json  target-Scada_GUI_V3_autogen-RelWithDebInfo-0f3a15d5430e920782f0.json  target-Scada_GUI_V3_autogen_timestamp_deps-RelWithDebInfo-732dd0fe89664e477f0e.json
GUI_Code/build-Scada_GUI_V3-Desktop_Qt_5_15_16_MSVC2019_64bit-RelWithDebInfo/Scada_GUI_V3_autogen/: deps  mocs_compilation.cpp
GUI_Code/build-Scada_GUI_V3-Desktop_Qt_5_15_16_MSVC2019_64bit-RelWithDebInfo/Scada_GUI_V3_autogen/EWIEGA46WW/: moc_customdelegate.cpp  moc_customdelegate.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_qcustomplot.cpp  moc_qcustomplot.cpp.d  moc_qledlabel.cpp  moc_qledlabel.cpp.d
GUI_Code/build-Scada_GUI_V3-Desktop_Qt_5_15_16_MSVC2019_64bit-RelWithDebInfo/Scada_GUI_V3_autogen/include/: ui_mainwindow.h
SCADA_GUI_Demo_V_1_0/SCADA_GUI_Demo_V_1_0/: CMakeLists.txt  CMakeUserPresets.json  MainWindow.cpp  MainWindow.h  loginDialog.cpp  loginDialog.h  loginDialog.ui  main.cpp  main_window.ui
database/: insert_data.py  scada.sql
documentation/: FreeIPA-Client Installation  FreeIPA-Server Installation  README  Server_Client_VM_overview.txt  Zeek Installation
historian/: historian.sql  historian_eth.zeek  zeekToPostgres.py
pi_arduino/: README.md  check_usb_serial.py  pi_arduino_comms.ino
server-client/: client.py  server.py
zeek/: Dockerfile  local.zeek  log_monitoring.py  usb_eth_monitoring.zeek
